--- a/main.html
+++ b/main.html
@@ -8,6 +8,45 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table  border="1px solid black" id="table">
+		<thead id="head">
+			<tr id="1">
+		    <td>Part</td>
+			<td>XS</td>
+			<td>S</td>
+			<td>M</td>
+			<td>L</td>
+			<td>XL</td>
+			</tr>
+		</thead>
+		<tbody>
+			<tr id="2">
+				<td>Waist</td>
+				<td>25</td>
+				<td>28</td>
+				<td>30</td>
+				<td>31</td>
+				<td>32</td>
+			</tr>
+			<tr id="3">
+				<td>Chest</td>
+				<td>34</td>
+				<td>34</td>
+				<td>38</td>
+				<td>40</td>
+				<td>41</td>
+			</tr></tbody>
+           <tfoot>
+			<tr id="4">
+				<td>Sleeve</td>
+				<td>23</td>
+				<td>24</td>
+				<td>24</td>
+				<td>25</td>
+				<td>25</td>
+			</tr>
+		</tfoot>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
