--- a/main.html
+++ b/main.html
@@ -8,19 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table  border="1px solid black" id="table">
+	<div id="table"><table  border="1px solid black" >
 		<thead id="head">
-			<tr id="1">
-		    <td>Part</td>
-			<td>XS</td>
+			<th id="head1">Part
+		<td>XS</td>
 			<td>S</td>
 			<td>M</td>
 			<td>L</td>
 			<td>XL</td>
-			</tr>
+			</th>
 		</thead>
 		<tbody>
-			<tr id="2">
+			<tr id="two">
 				<td>Waist</td>
 				<td>25</td>
 				<td>28</td>
@@ -28,7 +27,7 @@
 				<td>31</td>
 				<td>32</td>
 			</tr>
-			<tr id="3">
+			<tr id="three">
 				<td>Chest</td>
 				<td>34</td>
 				<td>34</td>
@@ -37,7 +36,7 @@
 				<td>41</td>
 			</tr></tbody>
            <tfoot>
-			<tr id="4">
+			<tr id="four">
 				<td>Sleeve</td>
 				<td>23</td>
 				<td>24</td>
@@ -46,7 +45,7 @@
 				<td>25</td>
 			</tr>
 		</tfoot>
-	</table>
+	</table></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
