--- a/main.html
+++ b/main.html
@@ -10,13 +10,12 @@
 	<!-- the entire body must be written by student -->
 	<div id="table"><table  border="1px solid black" >
 		<thead id="head">
-			<th id="head1">Part
+			<tr><th id="head1">Part</th>
 		<td>XS</td>
 			<td>S</td>
 			<td>M</td>
 			<td>L</td>
-			<td>XL</td>
-			</th>
+			<td>XL</td></tr>
 		</thead>
 		<tbody>
 			<tr id="two">
