--- a/main.html
+++ b/main.html
@@ -8,10 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div id="table"><table  border="1px solid black" >
+	<div id="table">
+		<table  border="1px solid black">
 		<thead id="head">
 			<tr><th id="head1">Part</th>
-		<td>XS</td>
+		    <td>XS</td>
 			<td>S</td>
 			<td>M</td>
 			<td>L</td>
@@ -33,8 +34,7 @@
 				<td>38</td>
 				<td>40</td>
 				<td>41</td>
-			</tr></tbody>
-           <tfoot>
+			</tr>
 			<tr id="four">
 				<td>Sleeve</td>
 				<td>23</td>
@@ -43,7 +43,7 @@
 				<td>25</td>
 				<td>25</td>
 			</tr>
-		</tfoot>
+		</tbody>
 	</table></div>
     <script type="text/javascript" src="./script.js">
 </script>
