--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div id="table">
-		<table  border="1px solid black">
+		<table border="1px solid black">
 		<thead id="head">
-			<tr><th id="head1">Part</th>
+			<tr><th>Part</th>
 		    <td>XS</td>
 			<td>S</td>
 			<td>M</td>
