--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
 				<td>31</td>
 				<td>32</td>
 			</tr>
-			<tr id="three">
+			<!-- <tr id="three">
 				<td>Chest</td>
 				<td>34</td>
 				<td>34</td>
@@ -42,7 +42,7 @@
 				<td>24</td>
 				<td>25</td>
 				<td>25</td>
-			</tr>
+			</tr> -->
 		</tbody>
 	</table></div>
     <script type="text/javascript" src="./script.js">
