--- a/main.html
+++ b/main.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
+<head><link rel="stylesheet" href="styles.css"></head>
 <body>
 	<!-- the entire body must be written by student -->
 	<div id="table">
 		<table border="1px solid black">
-		<thead id="head">
-			<tr><th>Part</th>
-		    <td>XS</td>
-			<td>S</td>
-			<td>M</td>
-			<td>L</td>
-			<td>XL</td></tr>
+		<thead>
+			<tr>
+				<th>Part</th>
+		    <th>XS</th>
+			<th>S</th>
+			<th>M</th>
+			<th>L</th>
+			<th>XL</th>
+			</tr>
 		</thead>
 		<tbody>
 			<tr id="two">
@@ -27,7 +24,7 @@
 				<td>31</td>
 				<td>32</td>
 			</tr>
-			<!-- <tr id="three">
+			<tr id="three">
 				<td>Chest</td>
 				<td>34</td>
 				<td>34</td>
@@ -42,7 +39,7 @@
 				<td>24</td>
 				<td>25</td>
 				<td>25</td>
-			</tr> -->
+			</tr>
 		</tbody>
 	</table></div>
     <script type="text/javascript" src="./script.js">
