--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 	<div id="table">
 		<table border="1px solid black">
 		<thead>
-			<tr>
+			<tr id="head">
 				<th>Part</th>
 		    <th>XS</th>
 			<th>S</th>
